# designer

./: .gitignore  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_users_table.py  001_initial_migration.py  002_create_designs_table.py
backend/app/: main.py
backend/app/agents/: agent.py  conversation_management_agent.py  conversational_agent.py  converser.py  design_agent.py  feedback_gate.py  generator.py  human_feedback_handler.py  image_enhancer.py  message_routing_agent.py  parallel_generation_agent.py  planner.py  progress_tracker.py  router.py  validator.py
backend/app/core/: auth.py  config.py  database.py
backend/app/database/: models.py
backend/app/middleware/: auth_middleware.py  rate_limit_middleware.py
backend/app/models/: api_models.py  conversation_state.py  design.py  design_state.py  prompt_config.py  user.py
backend/app/prompts/: generation_prompts.py  planning_prompts.py
backend/app/routers/: auth.py  chat.py  designs.py  generation.py  images.py
backend/app/schemas/: design.py  user.py
backend/app/services/: code_parser.py  design_service.py  image_processor.py  llm_service.py  multi_model_llm_service.py  s3_service.py  token_estimator.py  token_tracker.py  unsplash_service.py  user_service.py  validation_service.py
backend/app/utils/: health_utils.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  middleware.ts  next.config.js  (+4 more)
(+39 files in other folders)
