[project]
name = "backend"
version = "0.1.0"
description = "backend"
requires-python = ">=3.12"
readme = "README.md"

# Runtime dependencies (pins copied from your working requirements)
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "python-multipart==0.0.6",
  "python-dotenv==0.21.0",
  "pydantic[email]==2.11.4",
  "sqlalchemy==2.0.23",
  "alembic==1.13.0",
  "psycopg2-binary==2.9.9",
  "langgraph==0.2.33",
  "langgraph-checkpoint-postgres==2.0.21",
  "langchain==0.2.14",
  "langchain-openai==0.1.22",
  "langchain-core==0.2.41",
  "httpx==0.28.1",
  "aiofiles==24.1.0",
  "boto3==1.34.0",
  "aioboto3==12.3.0",
  "redis==5.0.1",
  "clerk-backend-api==3.3.0",
  "slowapi==0.1.9",
  "asyncpg>=0.30.0",
  "greenlet>=3.2.4",
  "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-mock==3.12.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Avoid the "Multiple top-level packages discovered" error for flat layouts
[tool.setuptools]
packages = ["app", "alembic"]
